# grain

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md  build  build-resources  report.md  run
examples/: CMakeLists.txt  common.cpp  geyser.cpp  rain.cpp  random.cpp
examples/geyser/: CMakeLists.txt  main.cpp
resources/: aging.affector  aging.emitter  bounce.affector  box.emitter  circle_deflector.affector  geyser.affector  geyser.emitter  line.emitter  linear_motion.affector  point.emitter  point.vsh  quad.fsh  quad.vsh  rain  uniform_gravity.affector  wind.affector
src/: CMakeLists.txt
src/grainc/: CMakeLists.txt  CompileTask.cpp  CompileTask.hpp  Compiler.cpp  DataType.cpp  DataType.hpp  Declaration.cpp  Declaration.hpp  Graph.hpp  Logger.hpp  Script.cpp  Script.hpp  ScriptType.cpp  ScriptType.hpp  SourceMap.cpp  SourceMap.hpp  builtins.glsl  builtins.h  grainc.cpp  grainc.hpp  main.cpp
src/grainr/: CMakeLists.txt  Context.cpp  Context.hpp  ParticleSystem.cpp  ParticleSystem.hpp  Program.cpp  Program.hpp  Shader.cpp  Shader.hpp  SystemDefinition.cpp  SystemDefinition.hpp  grainr.hpp
tools/: embed.c
